--- a/packages/interface-vite/src/pages/upload-preview/style.less
+++ b/packages/interface-vite/src/pages/upload-preview/style.less
@@ -1,3 +1,7 @@
 .upload-preview {
   height: calc(100vh - 64px);
+  .ant-spin-nested-loading .ant-spin {
+    top: var(--scroll-top);
+    transition: top 0.3s;
+  }
 }
