feat: 添加信息统计，对页面布局调整，改为流式滚动
fix #9

--- a/packages/interface-vite/src/pages/upload-preview/style.less
+++ b/packages/interface-vite/src/pages/upload-preview/style.less
@@ -1,5 +1,5 @@
 .upload-preview {
-  height: calc(100vh - 64px);
+  //   height: 100%;
   .ant-spin-nested-loading .ant-spin {
     top: var(--scroll-top);
     transition: top 0.3s;
